Update notebooks to run with updates in repo

--- a/notebooks/som_breast_sample.ipynb
+++ b/notebooks/som_breast_sample.ipynb
@@ -11,7 +11,7 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "from models.som import SOM\n",
-    "from dataloaders.datasets import Datasets\n",
+    "from datasets.datasets import Datasets\n",
     "import torch.backends.cudnn as cudnn\n",
     "import random\n",
     "from torch.utils.data.dataloader import DataLoader\n",
